--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+#all file without suffix
+*
+!*/
+!*.*
+
 ##### Windows
 # Windows thumbnail cache files
 Thumbs.db
@@ -26,6 +31,7 @@ $RECYCLE.BIN/
 
 ##### Linux
 *~
+
 
 # temporary files which can be created if a process still has a handle open of a deleted file
 .fuse_hidden*
@@ -346,11 +352,7 @@ GitHub.sublime-settings
 tmtags
 
 ##### VisualStudioCode
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
+.vscode
 *.code-workspace
 
 # Local History for Visual Studio Code
